# Snap-in-Time

./: .gitignore  .pre-commit-config.yaml  README.md  TODO  pypi.rst  requirements.txt  setup.cfg  snap-in-time.py  snapintime.py  snapintimeoneweek.py  snapunittest.py
.github/workflows/: linttest.yml
docs/: conf.py  config.rst  culling_explained.rst  index.rst  requirements.txt  usage.rst
docs/modules/: create_local_snapshots.rst  culling.rst  remote_backup.rst
docs/modules/utils/: config.rst  date.rst
examples/: example.config.json  readme.md  remote_snapshots.sh  snapshot_culling.sh  snapshots.sh
snapintime/: __init__.py  config.json  create_local_snapshots.py  culling.py  example.config.json  remote_backup.py  remote_culling.py  snapintime.py
snapintime/tests/: test_create_local_snapshots.py  test_culling.py  test_remote_backup.py
snapintime/utils/: config.py  date.py
snapintime/utils/tests/: test_time.py
