[metadata]
name = snapintime
author = Eric Mesa
author-email = eric@ericmesa.com
url = https://github.com/djotaku/Snap-in-Time
version = attr: snapintime.__init__.__version__
description =  A btrfs program for snapshots
long_description = A btrfs program for snapshots
keywords = btrfs
license = GPLv3
classifiers = 
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3

[options]
include_package_data = True
packages = find:
