[metadata]
name = snapintime
author = Eric Mesa
author-email = eric@ericmesa.com
url = https://github.com/djotaku/Snap-in-Time
version = attr: snapintime.__init__.__version__
description =  A program for creating, culling, and remote backup of btrfs snapshots
long_description = A better description will arrive soon. For now, this is alpha software.
keywords = btrfs
license = GPLv3
classifiers = 
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3

[options]
include_package_data = True
packages = find:
        xdgenvpy == "2.2.2"
